OPENIDM-2587 - CR-5370 - Fix schedule tab flickering

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/scheduleView.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/scheduleView.less
@@ -1,4 +1,6 @@
 .schedule-input-body {
+  display:none;
+
   .group-field-block-inline {
     padding: 10px 15px 0 0;
     margin: 5px 0;
